made corrections to spacing of elements

--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,8 @@ body {
 }
 
 .title h1 {
-    margin-top: 75px;
-    font-size: 6rem;
+    margin-top: 50px;
+    font-size: 72px;
 }
 
 .title-container {
@@ -127,7 +127,17 @@ button {
     }
 }
 
+.banner {
+    margin-left: 21px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media (max-width: 950px) {
+    .banner{
+    margin-left: 0px;
+    }
     .about-column {
         display: none;
     }
@@ -135,13 +145,6 @@ button {
     .home-wrapper {
         align-items: start;
     }
-}
-
-.banner {
-    margin-left: 21px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .banner h1 {
@@ -202,13 +205,15 @@ a:visited {
 }
 
 .blog-list-item h1 {
-    font-size: 2rem;
+    margin: auto 6px;
+    font-size: 28px;
     font-style: oblique;
     font-weight: 700;
 }
 
 .blog-list-item h2 {
-    font-size: 1rem;
+    margin: auto 6px;
+    font-size: 16px;
     font-style: oblique;
     font-weight: normal;
     color: rgb(89, 89, 89);
